<resources>
    <string name="app_name">EZMeal</string>
    <string name="nom_appli">EZMeal</string>
    <string name="enter">Enter</string>
    <string name="mdp">Mot de passe</string>
    <string name="login">Nom d\'utilisateur</string>
    <string name="pays">Pays :</string>
    <string name="inscription">Inscription</string>
    <string name="login2">Login :</string>
    <string name="mot_de_passe">Mot de passe :</string>
    <string name="r_peter_le_mot_de_passe">Répeter le mot de passe :</string>
    <string name="jour_de_naissance">Jour de naissance :</string>
    <string name="mois_de_naissance">Mois de naissance :</string>
    <string name="ville">Ville :</string>
    <string name="annee_de_naissance">Année de naissance :</string>
    <string name="connexion">Connexion</string>
    <string name="pageacc">Page d\'accueil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="aRecDescr">Description</string>
    <string name="aRecTitre">Titre</string>
    <string name="aRecDescr2">Description ici</string>
    <string name="aRecIng">Ingrédients</string>
    <string name="aRecIng2">Ingrédients ici</string>
    <string name="aRecPrix">Prix</string>
    <string name="aRecTmps">Temps</string>
    <string name="aRecTmps2">Temps ici</string>
    <string name="aRecNmbreCouv">Nombre de couverts</string>
    <string name="aRecNbreCouv2">Nmbre ici</string>
    <string name="aRecComp">Complexité</string>
    <string name="aRecComp2">Complexité ici</string>
    <string name="aRecEtape">Etapes</string>
    <string name="aRecEtape2">Etapes ici</string>



    <string-array name="categories">
        <item>cat1</item>
        <item>cat2</item>
        <item>cat3</item>
        <item>cat4</item>
        <item>cat5</item>
        <item>cat6</item>
        <item>cat7</item>
        <item>cat8</item>
        <item>cat9</item>
        <item>cat10</item>
        <item>cat11</item>
        <item>cat12</item>
        <item>cat13</item>
        <item>cat14</item>
        <item>cat15</item>

    </string-array>
    <string-array name="souscategories">
        <item>scat1</item>
        <item>scat2</item>
        <item>scat3</item>
        <item>scat4</item>
        <item>scat5</item>
        <item>scat6</item>
        <item>scat7</item>
        <item>scat8</item>
        <item>scat9</item>
        <item>scat10</item>
        <item>scat11</item>
        <item>scat12</item>
        <item>scat13</item>
        <item>scat14</item>
        <item>scat15</item>

    </string-array>
    <string-array name="recettes">
        <item>recette1</item>
        <item>recette2</item>
        <item>recette3</item>
        <item>recette4</item>
        <item>recette5</item>
        <item>rectte6</item>
        <item>recette7</item>
        <item>recette8</item>
        <item>recette9</item>
        <item>recette10</item>
        <item>recette11</item>


    </string-array>

    <string name="app_name">Catalogue</string>
    <string-array name="catalogue">
        <item>Poulet au champignon</item>
        <item>Houmous</item>
        <item>Banana Split</item>
        <item>Lasagne Bolognaise</item>
    </string-array>


    <string-array name="SpinSex">
        <item>Homme</item>
        <item>Femme</item>


    </string-array>
</resources>
